--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
         <li>Item 2</li>
         <li>Item 3</li>
     </ul>
+
+    <p>2 <sup>2</sup></p>
+    <p>x <sup>2</sup>+ y<sup>2</sup>=32</p>
+    <p>O<sub>2</sub> <hr> CO<sub>2</sub></p>
 </body>
 </html>
